# order-rust-outbox-example

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  FIXME.md  README.md  ci-cache-test-2.txt  ci-cache-test.txt  codecov.yml  commitlint.config.js  docker-compose.yml  justfile
.claude/: CLAUDE.md
.claude/rules/: commit-conventions.md
.githooks/: post-commit  post-rewrite  pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml  commit-lint.yml
debezium/: Dockerfile  register-connector.json
docs/adr/: 001-ci-caching-strategy.md
migrations/2024-01-01-000000_create_tables/: down.sql  up.sql
migrations/2026-02-28-000000_rename_outbox_to_commerce_order_outbox/: down.sql  up.sql
scripts/: run_e2e_tests.sh
src/: avro.rs  db.rs  errors.rs  lib.rs  main.rs  schema.rs
src/application/: order_service.rs
src/domain/: errors.rs  mod.rs  order.rs  ports.rs
src/handlers/: orders.rs
src/infrastructure/: mod.rs  models.rs  order_repo.rs
src/models/: mod.rs  order.rs  order_line.rs  outbox.rs
tests/: e2e_test.rs
