[package]
name = "order_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2", features = ["postgres", "uuid", "chrono", "r2d2", "serde_json", "numeric"] }
diesel_migrations = "2"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
bigdecimal = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
log = "0.4"
env_logger = "0.11"
utoipa = { version = "5", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

[dev-dependencies]
rdkafka = { version = "0.36", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
